--- a/view/user/product.ejs
+++ b/view/user/product.ejs
@@ -283,6 +283,12 @@
   .product-card-wrapper {
     animation: fadeUp 0.5s ease-out forwards;
   }
+  .breadcrumb-item + .breadcrumb-item::before {
+    display: inline-block;
+    vertical-align: middle; /* Ensures proper alignment */
+    margin-top: 10px; /* Adjust if needed */
+    transform: rotate(0deg); /* Prevents unwanted rotation */
+}
 </style>
 
 <%- include('partials/userheader') %>
