--- a/view/user/orderDetails.ejs
+++ b/view/user/orderDetails.ejs
@@ -234,7 +234,7 @@
                       <% } %>
                   </div>
                   <div class="text-end">
-                      <h5 class="mb-1">$<%= items[0].quantity*items[0].rate %></h5>
+                      <h5 class="mb-1">$<%=items[0].rate %></h5>
                       <small class="text-muted">Base price</small>
                   </div>
               </div>
